--- a/Loan_Prediction.ipynb
+++ b/Loan_Prediction.ipynb
@@ -1619,6 +1619,122 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random Forest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An advantage with Random Forest is that we can make it work with all the features and it returns a feature importance matrix which can be used to select features. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy :  100.000%\n",
+      "Cross-Validation Score:  77.529%\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = RandomForestClassifier(n_estimators=100)\n",
+    "predictor_var = ['Gender', 'Married', 'Dependents', 'Education',\n",
+    "       'Self_Employed', 'Loan_Amount_Term', 'Credit_History', 'Property_Area',\n",
+    "        'LoanAmount_log','TotalIncome_log']\n",
+    "classification_model(model, df, predictor_var, outcome_var)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here the accuracy is 100% for the training set which implies overfitting. To resolve: \n",
+    "1. Reduce the number of features\n",
+    "2. Tuning the model parameters <br>\n",
+    "We'll try both of these. <br>\n",
+    "First, generation of feature importance matrix: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TotalIncome_log     0.272425\n",
+      "Credit_History      0.268447\n",
+      "LoanAmount_log      0.223462\n",
+      "Dependents          0.055838\n",
+      "Property_Area       0.048158\n",
+      "Loan_Amount_Term    0.041246\n",
+      "Married             0.026374\n",
+      "Education           0.024523\n",
+      "Self_Employed       0.020777\n",
+      "Gender              0.018750\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "featimp = pd.Series(model.feature_importances_, index=predictor_var).sort_values(ascending=False)\n",
+    "# feature_importances_ attribute is used to select the features with the highest importance score.\n",
+    "print featimp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's use the top 5 variables for creating a model. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy :  82.899%\n",
+      "Cross-Validation Score:  80.133%\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = RandomForestClassifier(n_estimators=25, min_samples_split=25, max_depth=7, max_features=1)\n",
+    "# n_estimator : number of trees in the forest\n",
+    "# min_sample_split : min no. of samples required to split an internal node \n",
+    "# more info : http://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html\n",
+    "\n",
+    "predictor_var = ['TotalIncome_log', 'LoanAmount_log', 'Credit_History','Dependents', 'Property_Area']\n",
+    "classification_model(model, df, predictor_var, outcome_var)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice that although accuracy reduced, but the cross validation score is improving showing that the mdoel is generalizing well. \n",
+    "\n",
+    "Even after some basic parameter tuning on random forest, we have reached a cross-validation accuracy only slightly better than the original logistic model, which implies using a more sophisticated model does not gurantee better results. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
